# CBox

./: .gitignore  Cargo.toml  README.md  partition_network.json
copycat_cluster/: Cargo.toml
copycat_cluster/src/: main.rs
copycat_flowgen/: Cargo.toml
copycat_flowgen/src/: aptos.rs  avalanche.rs  bitcoin.rs  chain_replication.rs  diem.rs  dummy.rs  lib.rs  main.rs
copycat_mailbox/: Cargo.toml
copycat_mailbox/src/: main.rs
copycat_protocol/: Cargo.toml
copycat_protocol/src/: block.rs  lib.rs
copycat_protocol/src/block/: bitcoin.rs  dummy.rs  mod.rs
copycat_protocol/src/crypto/: dummy.rs  dummy_ecdsa.rs  mod.rs
copycat_protocol/src/transaction/: bitcoin.rs  dummy.rs  mod.rs
copycat_server/: Cargo.toml
copycat_server/src/: composition.rs  config.rs  main.rs  node.rs  peers.rs
copycat_server/src/block/: dummy.rs  mod.rs
copycat_server/src/chain/: mod.rs
copycat_server/src/flowgen/: bitcoin.rs  mod.rs
copycat_server/src/stage/: mod.rs
copycat_server/src/stage/commit/: dummy.rs  mod.rs
copycat_server/src/stage/consensus/: mod.rs
copycat_server/src/stage/consensus/block_creation/: dummy.rs  mod.rs
copycat_server/src/stage/consensus/block_dissemination/: broadcast.rs  gossip.rs  mod.rs
copycat_server/src/stage/consensus/block_management/: bitcoin.rs  dummy.rs  mod.rs
copycat_server/src/stage/consensus/block_validation/: dummy.rs  mod.rs
copycat_server/src/stage/consensus/decide/: bitcoin.rs  dummy.rs  mod.rs
copycat_server/src/stage/pacemaker/: dummy.rs  mod.rs
copycat_server/src/stage/txn_dissemination/: broadcast.rs  gossip.rs  mod.rs
copycat_server/src/stage/txn_validation/: bitcoin.rs  dummy.rs  mod.rs
copycat_server/src/state/: bitcoin.rs  mod.rs
copycat_utils/: Cargo.toml
copycat_utils/src/: config.rs  error.rs  lib.rs  log.rs  parse_topo.rs
experiment/: .gitignore  README.md  aggregate_data.py  aptos_diem_bottleneck.py  avax_faulty_success_rate.py  avax_pmaker_blk_queries_cnt.py  avax_pref_cache_pref_checks.py  avax_utils.py  avg_time_line.py  benchmark.py  bfs.py  bitcoin_asymmetric_compute_validators1.json  bitcoin_asymmetric_compute_validators10.json  combine_latency.py  diem_latency_breakdown.py  finder.py  gen_topo.py  gen_validator_config.py  get_log_lines.py  lat_tput.py  max.py  msg_delay.py  parse_avax_pref_checks.py  parse_blocks_gen.py  parse_bottleneck.py  parse_btc_rewards.py  parse_btc_tput.py  parse_ecore.py  parse_vcore.py  per_node_tput_timeline.py  sched_stats.py  setup-everything.sh  template.toml  tmp.py
experiment/avax_partition/: partition_machines.json  setup.toml
experiment/bitcoin_asym_compute/: setup.toml
experiment/copycat/: config.toml
experiment/copycat/engines/: home-runner
experiment/copycat/make/: install-perf  install-rust  setup-copycat  setup-env  setup-mailbox
experiment/copycat/run/: cleanup  cluster  date  mailbox  node
experiment/data/Aptos-Scale/: agg_results.csv  bottleneck.csv  plot.py
experiment/data/Aptos-vs-Diem/: agg_results.csv  aptos_diem_bottleneck.csv  plot.py
experiment/data/Avax-BlkLen/: agg_results.csv  plot.py
experiment/data/Avax-BlkLenToScale/: agg_results.csv  plot.py
experiment/data/Avax-Diverge/: plot.py  timeline.csv
experiment/data/Avax-Faulty/: agg_results.csv  avax_query_success.csv  model.py  plot.py
experiment/data/Avax-Latency/: plot.py
experiment/data/Avax-Partition/: agg_results.csv  plot.py
experiment/data/Avax-Pmaker/: avax_blk_queries.csv  plot.py  tput_timeline.csv
experiment/data/Avax-Pref-Cache/: agg_results.csv  avax_pref_cache.csv  plot.py
experiment/data/Avax-Scale/: agg_results.csv  agg_results_old.csv  plot.py
experiment/data/Btc-Asymm-Compute/: plot.py  rewards.csv
experiment/data/Btc-AsymmCompute/: plot.py  rewards.csv
experiment/data/Btc-Few-Ecore/: plot.py
experiment/data/Btc-FewEcore/: agg_results.csv  plot.py  simulation.csv  simulation_adjusted.csv
experiment/data/Btc-Scale/: agg_results.csv  plot.py  simulation.csv
experiment/data/ChainReplication-DummyECDSA/: agg_results.csv  plot.py
experiment/data/ChainReplication-NoEncrypt/: agg_results.csv  plot.py
experiment/data/Crosschain-Scale/: agg_results.csv  plot.py
experiment/data/Diem-Scale/: 2019ieee.csv  agg_results.csv  diem_latency_breakdown.csv  plot.py
experiment/data/Diem-Scale-NIC1Gbps/: agg_results.csv  plot.py
experiment/exp/: test.toml
experiment/setups/: aptos-diem.toml  aptos-scale.toml  avalanche-batch-size.toml  avalanche-diverge.toml  avalanche-faulty.toml  avalanche-latency.toml  avalanche-pmaker.toml  avalanche-pref-cache.toml  avalanche-scale.toml  avalanche.toml  bitcoin-few-ecore.toml  bitcoin-scale.toml  bitcoin.toml  chain-replication-no-signature.toml  chain-replication.toml  cross-chain.toml  diem-aptos.toml  diem-scale.toml  narwhal-hs.toml  test.toml
experiment/setups/avax_partition/: partition_network.json  setup.toml
experiment/setups/bitcoin_asym_compute/: setup.toml  validators1.json  validators10.json  validators2.json  validators4.json  validators6.json  validators8.json
src/: composition.rs  config.rs  consts.rs  context.rs  lib.rs  main.rs  node.rs  peers.rs  vcores.rs
src/config/: aptos.rs  avalanche.rs  bitcoin.rs  chain_replication.rs  diem.rs  dummy.rs  mod.rs
src/flowgen/: avalanche.rs  bitcoin.rs  mod.rs
src/peers/: mock.rs  mod.rs  peers.rs
src/protocol/: block.rs  mod.rs
src/protocol/crypto/: dummy.rs  dummy_ecdsa.rs  ecdsa.rs  mod.rs  vector_snark.rs
src/protocol/crypto/signature/: dummy.rs  mod.rs  (+2 more)
src/protocol/transaction/: aptos.rs  avalanche.rs  bitcoin.rs  diem.rs  dummy.rs  mod.rs
src/protocol/types/: aptos.rs  diem.rs  mod.rs
src/stage/: mod.rs
src/stage/commit/: dummy.rs  execute.rs  mod.rs
src/stage/consensus/: mod.rs
src/stage/pacemaker/: avalanche.rs  diem.rs  dummy.rs  fixed_inflight_blk.rs  mod.rs
src/stage/txn_dissemination/: broadcast.rs  gossip.rs  mod.rs  passthrough.rs
src/stage/txn_validation/: avalanche.rs  bitcoin.rs  diem.rs  dummy.rs  mod.rs
src/utils/: error.rs  log.rs  mod.rs  parse_config.rs  parse_topo.rs  report.rs  time_queue.rs
(+63 files in other folders)
