[package]
edition = "2021"
name = "copycat"
version = "0.1.0"

[workspace]
members = [
  "copycat_server",
  "copycat_mailbox",
  "copycat_cluster",
  "copycat_flowgen",
]
resolver = "2"

[dependencies]
async-scoped = {version = "0.9.0", features = ["use-tokio"]}
async-trait = "0.1.74"
bincode = "1.3.3"
clap = {version = "4.4.2", features = ["derive"]}
env_logger = "0.10"
get-size = {version = "0.1.4", features = ["derive"]}
lazy_static = "1.4.0"
log = "0.4"
mailbox_client = {git = "ssh://git@github.com/qusuyan/mailbox.git"}
primitive-types = {version = "0.12.2", features = ["serde"]}
rand = "0.8.5"
ring = "0.17.5"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
tokio = {version = "1.32.0", features = ["full"]}#, "tracing"] }
toml = "0.8.8"
# console-subscriber = "0.2.0"

[features]
interprocess = ["mailbox_client/interprocess"]

[patch.'ssh://git@github.com/qusuyan/mailbox.git']
mailbox = {path = "../mailbox"}
mailbox_client = {path = "../mailbox/mailbox_client"}

[profile.release]
debug = "line-tables-only"
