[package]
edition = "2021"
name = "copycat"
version = "0.1.0"

[workspace]
members = [
  "copycat_server",
  "copycat_mailbox",
  "copycat_cluster",
  "copycat_flowgen",
]
resolver = "2"

[dependencies]
async-trait = "0.1.74"
atomic_float = "1.0.0"
bincode = "1.3.3"
clap = {version = "4.4.2", features = ["derive"]}
dashmap = "5.5.3"
default_fields = "0.1.0"
env_logger = "0.10"
get-size = {version = "0.1.4", features = ["derive"]}
k256 = {version = "0.13.3", features = ["alloc"]}
lazy_static = "1.4.0"
log = "0.4"
mailbox_client = {git = "ssh://git@github.com/qusuyan/mailbox.git"}
# parking_lot = "0.12.3"
primitive-types = {version = "0.12.2", features = ["serde"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
ring = "0.17.5"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
tokio = {version = "1.32.0", features = ["full"]}#, "tracing"] }
tokio-metrics = "0.3.1"
toml = "0.8.8"
frost-secp256k1 = "2.1.0"

# console-subscriber = "0.2.0"

[features]
interprocess = ["mailbox_client/interprocess"]

[profile.release]
debug = "line-tables-only"

[patch.'ssh://git@github.com/qusuyan/mailbox.git']
mailbox = {path = "../mailbox"}
mailbox_client = {path = "../mailbox/mailbox_client"}

# [patch.crates-io]
# tokio = {path = "../tokio/tokio"}
