[package]
edition = "2021"
name = "copycat_cluster"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = {version = "4", default-features = false, features = ["help", "suggestions", "color", "std", "cargo", "derive"]}
copycat = {path = "../"}
env_logger = "0.10"
log = "0.4"
mailbox = {git = "ssh://git@github.com/qusuyan/mailbox.git"}
rand = "0.8.5"
tokio = {version = "1.32.0", features = ["full"]}
