[package]
edition = "2021"
name = "copycat_flowgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bincode = "1.3.3"
copycat = {path = "../"}
mailbox = {git = "ssh://git@github.com/qusuyan/mailbox.git"}
rand = "0.8.5"
tokio = {version = "1.32.0", features = ["full"]}
