[package]
edition = "2021"
name = "copycat_flowgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bincode = "1.3.3"
copycat = {path = "../"}
lazy_static = "1.4.0"
log = "0.4"
primitive-types = {version = "0.12.2", features = ["serde"]}
rand = "0.8.5"
serde = {version = "1.0", features = ["derive", "rc"]}
tokio = {version = "1.32.0", features = ["full"]}
