[package]
name = "copycat_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
get-size = { version = "0.1.4", features = ["derive"]}
copycat_utils = { path = "../copycat_utils" }
ring = "0.17.5"
primitive-types = { version = "0.12.2", features = ["serde"] }
