[package]
name = "copycat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
clap = { version = "4.4.2", features = ["derive"] }
mailbox_client = { git="ssh://git@github.com/qusuyan/mailbox.git" }
copycat_utils = { path="../copycat_utils" }
copycat_protocol = { path="../copycat_protocol" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] } #, "tracing"] }
async-trait = "0.1.74"
lazy_static = "1.4.0"
bincode = "1.3.3"
get-size = "0.1.4"
rand = "0.8.5"
primitive-types = { version = "0.12.2", features = ["serde"] }
# console-subscriber = "0.2.0"
toml = "0.8.8"
