[package]
edition = "2021"
name = "copycat_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bincode = "1.3.3"
clap = {version = "4.4.2", features = ["derive"]}
copycat = {path = "../", features = ["interprocess"]}
copycat_flowgen = {path = "../copycat_flowgen"}
env_logger = "0.10"
get-size = "0.1.4"
lazy_static = "1.4.0"
log = "0.4"
mailbox_client = {git = "ssh://git@github.com/qusuyan/mailbox.git"}
primitive-types = {version = "0.12.2", features = ["serde"]}
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.32.0", features = ["full"]}
toml = "0.8.8"
