[package]
name = "copycat_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
mailbox_utils = { git="ssh://git@github.com/qusuyan/mailbox.git" }
tokio = { version = "1.32.0" }
bincode = "1.3.3"
toml = "0.8.8"
