[package]
edition = "2021"
name = "copycat_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
env_logger = "0.10"
log = "0.4"
mailbox_utils = {git = "ssh://git@github.com/qusuyan/mailbox.git"}
serde_json = "1.0"
tokio = {version = "1.32.0"}
toml = "0.8.8"
